# ai-hackathon-1

./: 404.html  agent.py  chatbot.py  chunker.py  chunks.json  crawled_content.txt  crawler.py  embedded_chunks.json  embedder.py  index.html  ingest.py  main.py  pipeline.py  project.py  pyproject.toml  qdrant_uploader.py  sitemap.xml  test_db.py
.specify/memory/: constitution.md
assets/js/: 0e384e19.79cce2c6.js  18c41134.ee515389.js  1df93b7f.a71c0798.js  1e4232ab.f2f52b96.js  391dcf2d.248aaec8.js  393be207.fa82e6c7.js  4473b7ff.33eab7ed.js  4a2092a9.82ee7d4d.js  51279860.5a6b759a.js  533a09ca.9205a52b.js  5ad232c4.18a8edde.js  5c868d36.0244b9b5.js  74286cc8.d3a0c77d.js  822bd8ab.4ef55967.js  9b44c66f.50bf9369.js  a07e0cef.2214657c.js  a24890ad.47c98ae5.js  b799d924.69d23841.js  b99a2313.845b1b38.js  c7dfbc38.990746d5.js  cb806ea2.43405146.js  d6a67854.c746388f.js  da9f92f8.beb3d6c5.js  dd3f862c.4596db41.js  dff1c289.271790f1.js  e44a2883.281d4d85.js  f4658754.ef42b11b.js  f55d3e7a.c0b45281.js  fac17f2a.ca82756c.js  fb41a91f.a1aeb8c0.js  main.e5cc9c22.js  runtime~main.bbcf414f.js
backend/: main.py  pyproject.toml
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/intro/: index.html
docs/module-1/: index.html
docs/module-1/nodes-topics-services-rclpy/: index.html
docs/module-1/ros-2-basics-for-humanoid-control/: index.html
docs/module-2/: index.html
docs/module-3/: index.html
docs/module-4/: index.html
markdown-page/: index.html
static/: index.html
website/: docusaurus.config.ts  package-lock.json
(+40 files in other folders)
